//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table account {
  id Bytes [pk]
  email String [unique, not null]
  name String
  password String [not null]
  role Role [not null]
}

Table customer {
  account_id Bytes [pk]
  gender Gender [not null]
  born_date DateTime [not null]
  phone String [not null]
  avatar String
}

Table admin {
  account_id Bytes [pk]
}

Table laptop_model {
  id Bytes [pk]
  name String [not null]
  brand String [not null]
  cpu String [not null]
  ram String [not null]
  gpu String [not null]
  storage String [not null]
  display String [not null]
  color Color [not null]
  price Decimal [not null]
  description String
}

Table laptop_on_sale {
  laptop_model_id Bytes [not null]
  sale_id Bytes [not null]

  indexes {
    (laptop_model_id, sale_id) [pk]
  }
}

Table sale {
  id Bytes [pk]
  event_description String
  start_at DateTime [not null]
  end_at DateTime [not null]
  discount Float [not null]
}

Table laptop {
  mac_id Bytes [pk]
  MFG DateTime [not null]
  model_id Bytes [not null]
  status LaptopStatus [not null, default: 'Available']
}

Table order {
  id Bytes [pk]
  customer_id Bytes [not null]
  status OrderStatus [not null, default: 'Pending']
  address String [not null]
  date_create DateTime [default: `now()`, not null]
  delivery_cost Decimal [not null]
  final_price Decimal [not null]
}

Table order_detail {
  id Bytes [pk]
  order_id Bytes [not null]
  laptop_model_id Bytes [not null]
  quantity Int [not null]
  price Decimal [not null]
}

Table payment {
  id Bytes [pk]
  customer_id Bytes [not null]
  order_id Bytes [unique, not null]
  type PaymentType [not null]
  status PaymentStatus [not null]
  payment_method_id Bytes
}

Table payment_method {
  id Bytes [pk]
  data Json [not null]
  type PaymentType [not null]
}

Table laptop_on_image {
  laptop_model_id Bytes [not null]
  image_id Bytes [not null]

  indexes {
    (laptop_model_id, image_id) [pk]
  }
}

Table image {
  id Bytes [pk]
  image_url String [not null]
}

Table comment {
  id Bytes [pk]
  laptop_model_id Bytes [not null]
  account_id Bytes [not null]
  parent_id Bytes
  body String [not null]
}

Table chat {
  id Bytes [pk]
  sender_id Bytes [not null]
  receiver_id Bytes [not null]
  message String [not null]
  create_at DateTime [default: `now()`, not null]
}

Table address {
  id Bytes [pk]
  customer_id Bytes [not null]
  city String [not null]
  district String [not null]
  ward String
  street String [not null]
  phone String [not null]
}

Table cart {
  id Bytes [pk]
  customer_id Bytes [not null]
}

Table laptop_on_cart {
  cart_id Bytes [not null]
  laptop_model_id Bytes [not null]
  quantity Int [not null]

  indexes {
    (cart_id, laptop_model_id) [pk]
  }
}

Enum Color {
  Red
  Blue
  Green
  Black
  White
  Silver
  Gold
}

Enum PaymentType {
  VNPay
  Momo
  ZaloPay
  CashOnDelivery
}

Enum PaymentStatus {
  Pending
  Success
  Failed
}

Enum OrderStatus {
  Pending
  Shipped
  Delivered
  Cancelled
}

Enum LaptopStatus {
  Available
  SoldOut
  Maintenance
}

Enum Gender {
  Male
  Female
  Other
}

Enum Role {
  Customer
  Admin
}

Ref: customer.account_id - account.id

Ref: admin.account_id - account.id

Ref: laptop_on_sale.laptop_model_id > laptop_model.id

Ref: laptop_on_sale.sale_id > sale.id

Ref: laptop.model_id > laptop_model.id

Ref: order.customer_id > customer.account_id

Ref: order_detail.order_id > order.id

Ref: order_detail.laptop_model_id > laptop_model.id

Ref: payment.order_id - order.id

Ref: payment.customer_id > customer.account_id

Ref: payment.payment_method_id > payment_method.id

Ref: laptop_on_image.laptop_model_id > laptop_model.id

Ref: laptop_on_image.image_id > image.id

Ref: comment.laptop_model_id > laptop_model.id

Ref: comment.account_id > account.id

Ref: comment.parent_id - comment.id

Ref: chat.sender_id > account.id

Ref: chat.receiver_id > account.id

Ref: address.customer_id > customer.account_id

Ref: cart.customer_id > customer.account_id

Ref: laptop_on_cart.cart_id > cart.id

Ref: laptop_on_cart.laptop_model_id > laptop_model.id